# tract

./: Cargo.toml
api/: Cargo.toml
api/ffi/: Cargo.toml
api/proxy/: Cargo.toml
api/rs/: Cargo.toml
cli/: Cargo.toml
core/: Cargo.toml
data/: Cargo.toml
examples/face_detection_yolov8onnx_example/: Cargo.toml
examples/face_similarity_arcface_onnx/: Cargo.toml
examples/keras-tract-tf2/: Cargo.toml
examples/nnef-dump-mobilenet-v2/: Cargo.toml
examples/nnef-mobilenet-v2/: Cargo.toml
examples/onnx-mobilenet-v2/: Cargo.toml
examples/pytorch-albert-v2/: Cargo.toml
examples/pytorch-resnet/: Cargo.toml
examples/tensorflow-mobilenet-v2/: Cargo.toml
examples/tflite-mobilenet-v3/: Cargo.toml
extra/: Cargo.toml
gpu/: Cargo.toml
harness/core-proptest-pulse/: Cargo.toml
harness/lstm-proptest-onnx-vs-tf/: Cargo.toml
harness/nnef-inceptionv3/: Cargo.toml
harness/tf-inceptionv3/: Cargo.toml
harness/tf-mobilenet-v2/: Cargo.toml
harness/tf-moz-deepspeech/: Cargo.toml
harness/tfl-mobilenet-v2-q/: Cargo.toml
hir/: Cargo.toml
libcli/: Cargo.toml
linalg/: Cargo.toml
metal/: Cargo.toml
nnef/: Cargo.toml
nnef/cli/: Cargo.toml
nnef/nnef-resources/: Cargo.toml
onnx/: Cargo.toml
onnx-opl/: Cargo.toml
pulse/: Cargo.toml
pulse-opl/: Cargo.toml
safetensors/: Cargo.toml  README.md
safetensors/src/: lib.rs
tensorflow/: Cargo.toml
test-rt/infra/: Cargo.toml
test-rt/suite-onnx/: Cargo.toml
test-rt/suite-unit/: Cargo.toml
test-rt/test-blas/: Cargo.toml
test-rt/test-f16/: Cargo.toml
transformers/: Cargo.toml
(+2 files in other folders)
