[package]
name = "tract-safetensors"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Tract loader for .safetensors files"
repository = "https://github.com/sonos/tract"

[dependencies]
safetensors = "0.5.3" # Or latest compatible version
tract-core = { path = "../core", version = "0.21.14-pre" }
tract-hir = { path = "../hir", version = "0.21.14-pre" }

log = "0.4"
anyhow = "1.0"
thiserror = "1.0"
memmap2 = "0.9"

[dev-dependencies]
tempfile = "3"
